--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.2.0</version>
-        </dependency>x
+        </dependency>
     </dependencies>
 
     <build>
